--- a/HTML/Odev2/index.html
+++ b/HTML/Odev2/index.html
@@ -31,7 +31,7 @@
     
     <li><span style= "color: cadetblue;">Kitap</span></li>
     <ul>
-        <a></a><li>Hayvan Çiftliği</li>
+        <a href="https://www.goodreads.com/tr/book/show/170448.Animal_Farm" target="blank "><li>Hayvan Çiftliği</li></a>
         <li>Beyaz Zambaklar Ülkesinde</li>
         <li>Kürk Mantolu Madonna</li>
     </ul>
